# soklyn

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: nn_math.cu
examples/: cifar_ten_train.rs  conv_test.rs  mnist_autoencoder.rs  mnist_train.rs
src/: conv.rs  device.rs  ffn.rs  layers.rs  lib.rs  mlp.rs  util.rs
src/cuda/: CMakeLists.txt  nn_math.cu
src/cuda/kernel/: math.cu  math.cuh  types.cuh  types.hpp  util.cu  util.cuh
src/cuda/kernel/conv/: forward.cu  forward.cuh  forward_fft.cu
src/cuda/kernel/ffn/: backward.cu  backward.cuh  backward_wmma.cu  forward.cu  forward.cuh  forward_wmma.cu
src/io/: device.rs  safetensor.rs  save.rs
src/io/device/: conv_device.rs  ffn_device.rs  util_device.rs
src/nn/: functions.rs  mod.rs  network.rs  safetensor.rs  scheduler.rs
src/util/: context.rs  core.rs  function.rs  functions.rs  log.rs  precision.rs  scheduler.rs  type.rs
