[package]
name = "soklyn"
version = "0.1.0"
edition = "2024"
authors = ["Felix1G"]
description = "A high-performance neural network library written in Rust, utilizing CUDA for GPU-accelerated layer execution."
readme = "README.md"
repository = "https://github.com/Felix1G/soklyn/tree/master"
license = "MIT"
keywords = ["cuda", "nn", "deep-learning", "gpu", "machine-learning"]
categories = [
    "science::machine-learning",
    "hardware-support",
    "data-structures",
    "asynchronous"
]
build = "build.rs"

[dependencies]
rand = "0.10.0"
rand_chacha = "0.9.0"
cudarc = { version = "0.19.7", features = ["cuda-12050", "nvrtc", "f16"] }
derivative = "2.2.0"
bytemuck = "1.25.0"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck", "serde", "num-traits"] }
thiserror = "2.0.18"
env_logger = "0.11.11"
log = "0.4.32"

[dev-dependencies]
mnist = { version = "0.6.0", features = ["download"] }
image = "0.25.10"
cifar-ten = "0.6.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
